convert all absolute units to relative units and fix line spacing

--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -1,61 +1,58 @@
-// @use './variables'as *;
 @import './variables';
-
-// make sure to convert all px to rems
 
 // mobile text mixins 
 @mixin mobile-text-header {
-  font-size: 24px;
-  line-height: 32px;
+  font-size: 1.5rem;
+  line-height: 2rem;
   font-weight: bold;
 }
 
 @mixin mobile-body-footer-copy {
-  font-size: 13px;
-  line-height: 18px;
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
   font-weight: normal;
 }
 
 @mixin mobile-labels-buttons {
-  font-size: 10px;
-  line-height: 20px;
+  font-size: 0.625rem;
+  line-height: 1.25rem;
   font-weight: bold;
 }
 
 // desktop and tablet text mixins
 @mixin tablet-page-header {
-  font-size: 60px;
-  line-height: 68px;
+  font-size: 3.75rem;
+  line-height: 4.25rem;
   font-weight: bold;
 }
 
 @mixin tablet-section-header {
-  font-size: 36px;
-  line-height: 44px;
+  font-size: 2.25rem;
+  line-height: 2.75rem;
   font-weight: bold;
 }
 
 @mixin tablet-subheader {
-  font-size: 24px;
-  line-height: 32px;
+  font-size: 1.5rem;
+  line-height: 2rem;
   font-weight: 600;
 }
 
 @mixin tablet-body-copy {
-  font-size: 14px;
-  line-height: 22px;
+  font-size: 0.875rem;
+  line-height: 1.375rem;
   font-weight: normal;
 }
 
 @mixin tablet-footer-copy {
-  font-size: 14px;
-  line-height: 20px;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
   font-weight: normal;
 }
 
 // media query mixins
 @mixin tablet {
-  @media  screen and (min-width: $tablet-width) {
+  @media screen and (min-width: $tablet-width) {
     @content;
   }
 }
